syntax = "proto3";

package ihavefood;

option go_package =  "/genproto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


// ---------------------DELIVERY SERVICE---------------------------
// Manages riders and delivery process.
service DeliveryService {

    // GetOrderTracking provides real-time updates on the current status and location of 
    // an order. It tracks the progress of the order from preparation to delivery, 
    // giving the customer real-time status updates.
    //
    // This function should be called from OrderService to track
    rpc GetOrderTracking(GetOrderTrackingRequest) returns(stream GetOrderTrackingResponse){}

    // GetDeliveryFee calculates the delivery fee from merchant to customer
    // using merchant ID and customer address ID.
    // 
    // Example:
    //      GET /api/deliveries/fee?customer_id=1111&customer_address_id=2222&merchant_id=5555
    rpc GetDeliveryFee(GetDeliveryFeeRequest) returns(GetDeliveryFeeResponse) {
        option (google.api.http) = { 
            get: "/api/deliveries/fee"
        };
    }

    // ConfirmRiderAccept updates the order with the rider who accepted it and returns 
    // the pickup information.
    rpc ConfirmRiderAccept(ConfirmRiderAcceptRequest) returns(PickupInfo){
        option (google.api.http) = {
            patch: "/api/deliveries/{order_id}/accept" 
            body: "rider_id"
        };
    }

    // ConfirmOrderDeliver updates the delivery status after rider has delivered.
    rpc ConfirmOrderDeliver(ConfirmOrderDeliverRequest) returns(google.protobuf.Empty){
        option (google.api.http) = {
            patch: "/api/deliveries/{order_id}/deliver" 
        };
    }

    // Rider management 
    rpc CreateRider(CreateRiderRequest) returns(Rider){}
}


message Point {
    // The latitude in degrees. It must be in the range [-90.0, +90.0].
    double latitude = 1;
    // The longitude in degrees. It must be in the range [-180.0, +180.0].
    double longitude = 2;
}

message PickupInfo {
    // pickup_code is a simplified code used for identifying an order 
    // for the rider. use three digit i.e 712 , 415
    string pickup_code = 1;
    // Merchant address
    Point pickup_location = 2; 
    // Customer address
    Point drop_off_location = 3;
}

message Rider {
    string rider_id = 1;
    string username = 2;
    string phone_number = 3;
}

message GetOrderTrackingRequest {
    string order_id = 1;
}

message GetOrderTrackingResponse {
    string order_id = 1;
    string rider_id = 2;
    Point rider_location = 3;
    // The timestamp of the most recent update to the rider's location.
    google.protobuf.Timestamp update_time = 4;
}

message GetDeliveryFeeRequest {
    string customer_id = 1;
    string customer_address_id = 2;
    string merchant_id = 3;
}

message GetDeliveryFeeResponse {
    int32 fee =1;
}

message ConfirmRiderAcceptRequest {
    string order_id = 1;
    string rider_id = 2;
}

message ConfirmOrderDeliverRequest {
    string order_id = 1;
}

message CreateRiderRequest {
  string rider_id = 1;
  string username = 2;
  string phone_number = 3;
}
